--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
+    "react-pdf": "^7.7.0",
     "react-router": "^6.22.0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "react-toast": "^1.0.3",
     "react-toastify": "^10.0.4",
     "rsuite": "^5.53.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
