--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@rsuite/charts": "^5.2.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.2",
     "js-cookie": "^3.0.5",
     "less": "^4.2.0",
     "moment": "^2.30.1",
@@ -20,6 +22,8 @@
     "react-toast": "^1.0.3",
     "react-toastify": "^10.0.4",
     "rsuite": "^5.53.2",
+    "rsuite-theme": "^2.0.20",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
